# echo.nvim

./: .gitignore  .nvim.lua  Cargo.toml  LICENSE.md  README.md  build.lua  build.rs  env.nu  justfile  toolkit.nu
.cargo/: config
.github/workflows/: release.yml
.just/: common.just  linux.just  macos.just  windows.just
assets/sounds_mp3/: LICENSE  README.md
lua/echo/: build-utils.lua  init.lua
lua/overseer/component/echo/: notify.lua
lua/telescope/_extensions/: echo.lua
native/: error.rs  lib.rs  options.rs  sound.rs
