[package]
name = "echo_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "echo_native"
crate-type = ["cdylib"]
path = "native/lib.rs"

[dependencies]
anyhow = "1.0"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", version = "0.4.2", features = [
  # "neovim-0-9",
  # "libuv",
  "neovim-nightly",
] }
nvim-oxi-api = { git = "https://github.com/noib3/nvim-oxi.git", version = "0.4.2", features = [
  # "neovim-0-9",
  "neovim-nightly",
] }
optfield = "0.3"
rodio = { version = "0.17", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
